Fix bug where you can click on mobile nav links even when the menu is closed

--- a/assets/css/page-base-styles.css
+++ b/assets/css/page-base-styles.css
@@ -259,6 +259,7 @@ h1 {
 
   .mobile-nav-menu.hide {
     display: none;
+    pointer-events: none;
   }
 
   .mobile-nav-links {
